--- a/ci/docker/docker-compose.yaml
+++ b/ci/docker/docker-compose.yaml
@@ -3,7 +3,6 @@ name: dagster-dbt
 services:
 
   # This service creates the necessary files for dbt (manifest.json, etc.), as well as runs the dbt documentation server.
-  # Эта служба создает необходимые файлы для работы dbt (manifest.json и пр.), а так же запускает сервер документации dbt.
   dbt-docs-and-prepare-project:
     container_name: dbt-docs-and-prepare-project
     build:
@@ -12,10 +11,10 @@ services:
     image: dbt-docs-and-prepare-project-image
     ports:
         - 8001:8001
-#    networks:
-#      - dbt_network
+    networks:
+      - dagster_dbt_network
     environment:
-      DWH_USERNAME: ${DWH_USERNAME}
+      DWH_USER: ${DWH_USER}
       DWH_PASSWORD: ${DWH_PASSWORD}
       DWH_HOST: ${DWH_HOST}
       DWH_PORT: ${DWH_PORT}
@@ -26,10 +25,11 @@ services:
       - ./app/dbt/:/opt/dagster/app/dbt/
 
   # This service runs the postgres database used by dagster to store launches, schedules, and event logs.
-  # Эта служба запускает базу данных postgres, используемую dagster для хранения запусков, расписаний, и журналов событий.
   dagster-postgresql:
     container_name: dagster-postgresql
     image: postgres:17
+    networks:
+      - dagster_dbt_network
     ports: 
       - 5432:5432
     environment:
@@ -48,6 +48,8 @@ services:
   dagster-rabbitmq:
     container_name: dagster-rabbitmq
     image: rabbitmq:3.9.9-management
+    networks:
+      - dagster_dbt_network
     ports:
       - 5672:5672
       - 15672:15672
@@ -61,12 +63,16 @@ services:
   dagster-keydb:
     container_name: dagster-keydb
     image: eqalpha/keydb:x86_64_v6.2.0
+    networks:
+      - dagster_dbt_network
     ports: 
         - 6379:6379 
 
   dagster-flower:
     container_name: dagster-flower
     image: mher/flower:0.9.7
+    networks:
+      - dagster_dbt_network
     environment:
         - CELERY_BROKER_URL=${CELERY_BROKER_URL}
         - FLOWER_PORT=5555      
@@ -76,13 +82,14 @@ services:
         - dagster-rabbitmq
 
   # This service runs a code server that downloads custom code.
-  # Эта служба запускает сервер кода, который загружает пользовательский код.
   dagster-user-code:
     container_name: dagster-user-code
     build:
       context: .
       dockerfile: ./Dockerfile_user_code_prod
     image: dagster-user-code-image
+    networks:
+      - dagster_dbt_network
     environment:
       PG_USERNAME: ${PG_USERNAME}
       PG_PASSWORD: ${PG_PASSWORD}
@@ -98,13 +105,14 @@ services:
       - ./app/:/opt/dagster/app/
 
   # This service is running under a dagster web server.
-  # Эта служба работает под управлением dagster-веб-сервера.
   dagster-webserver:
     container_name: dagster-webserver
     build:
       context: .
       dockerfile: ./Dockerfile_dagster
     image: dagster-webserver-image
+    networks:
+      - dagster_dbt_network
     entrypoint:
       - dagster-webserver
       - -h
@@ -134,13 +142,14 @@ services:
         condition: service_started
 
   # This service starts the dagster-daemon process.
-  # Эта служба запускает процесс dagster-daemon.
   dagster-daemon:
     container_name: dagster-daemon
     build:
       context: .
       dockerfile: ./Dockerfile_dagster
     image: dagster-daemon-image
+    networks:
+      - dagster_dbt_network
     entrypoint:
       - dagster-daemon
       - run
@@ -167,8 +176,8 @@ services:
       context: .
       dockerfile: ./Dockerfile_user_code_prod
     image: dagster-celery-executor-image
-#    networks:
-#      - dbt_network
+    networks:
+      - dagster_dbt_network
     environment: 
       PG_USERNAME: ${PG_USERNAME}
       PG_PASSWORD: ${PG_PASSWORD}
@@ -178,6 +187,11 @@ services:
       CELERY_BROKER_URL: ${CELERY_BROKER_URL_PY}
       CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
       CELERY_WORKER_CONCURRENCY: 10
+      DWH_USER: ${DWH_USER}
+      DWH_PASSWORD: ${DWH_PASSWORD}
+      DWH_HOST: ${DWH_HOST}
+      DWH_PORT: ${DWH_PORT}
+      DWH_DB: ${DWH_DB}
     entrypoint:
       - dagster-celery
       - worker 
@@ -195,7 +209,7 @@ services:
       - ./app/:/opt/dagster/app/
 
 
-#networks:
-#  dbt_network:
-#    name: dbt_network
-#    driver: bridge
+networks:
+  dagster_dbt_network:
+    name: dagster_dbt_network
+    external: true
