--- a/ci/docker/analytics_db/docker-compose.yaml
+++ b/ci/docker/analytics_db/docker-compose.yaml
@@ -21,5 +21,5 @@ services:
 networks:
   dagster_dbt_network:
     driver: bridge
-    name: dagster_dbt_network  # Явное именование
+    name: dagster_dbt_network
     external: true
